--- a/tex/chapter04.tex
+++ b/tex/chapter04.tex
@@ -19,11 +19,12 @@
   \item 集群中的机器数量在运行过程中没有变化，没有机器宕机也没有新机器加入集群，每个机器的处理能力也不随时间变化
   \item 网络开销仅计算进程迁移时进程所拥有的内存页（本文选取分配给整个容器进程的内存页）迁移造成的开销；
   \item 网络数据传输不耗费时间，且网络状态始终保持良好，不会出现network partition（网络分割），没有网络带宽的限制。
-  \item 假设巨型虚拟机运行不占用节点上的资源，dQEMU进程和DSM不占用CPU和内存。
+
 \end{itemize}
 
 \subsection{仿真系统的建立}
 在上述假设成立的条件下，我们用Python脚本（simulator.py）模块化地设计如下仿真系统：
+
 \begin{figure}
 \centering
 \begin{minipage}[c]{0.55\textwidth}
@@ -74,7 +75,7 @@ class Machine:
 
 除此之外，还有不属于任何类的$parse\_input()$函数和$simulate()$函数。$parse\_input()$函数负责读取$task\_events$数据和$task\_usage$数据，填充所有Task类，并初始化所有相关数据结构；$simulate()$函数负责遍历整个追踪过程中所有的时间戳，将每一个时间戳上$SUBMIT$的任务调度到任意的节点上，每隔一个$INTERVAL$执行平衡函数$migrate()$（与不执行该调度函数相对比）。在每个时间戳上，还要调用Scheduler类提供的$record\_and\_update\_duration()$和$process()$接口，更新机器上任务的状态（如某个任务$FINISH$，从机器的tasks中退出），并且更新各个统计数据。
 
-综上，我们每次模拟输出的数据有：（1）所有机器的平均CPU使用率$mean$，（2）所有机器CPU使用率的基尼系数的平均值$gini$，（3）所有机器的资源超量提供量$overcommit$，（4）所有任务的平均延迟$duration$，（5）平衡过程造成的网络开销$migration\_mem$。我们通过对集群中的机器数量$n\_machines$以及所有任务的资源超量提供比例$overcommit\_ratio$进行变更，而不变化待处理任务的总量，对调度算法进行仿真，获取每种配置下的模拟输出，来观察不同的平衡算法的性能。
+综上，我们每次模拟输出的数据有：（1）所有机器的平均CPU使用率$mean$，（2）所有机器CPU使用率的基尼系数的平均值$gini$，（3）所有机器的资源超量提供量$overcommit$，（4）所有任务的平均延迟$duration$，（5）平衡过程造成的网络开销$migration\_mem$。我们通过对集群中的机器数量$n\_machines$以及所有任务的资源超量提供比例$overcommit\_ratio$进行变更，而不变化待处理任务的总量，对调度算法进行仿真，通过对比每种配置下的仿真输出，来观察不同的平衡算法的性能。
 
 \subsection{粗粒度调度器的仿真}
 \begin{figure}[!htp]
@@ -92,9 +93,11 @@ class Machine:
 \Function {migrate}{$timestamp$}
 \For{each $G\_cell \in Cluster$}
 \State $lowest\_loaded\_node \gets find\_lowest\_loaded\_node(G\_cell,\  timestamp)$
+\State
 \For{each $node \in (G\_cell - lowest\_loaded\_node)$}
 \State $/*\ Get\ migratable\ tasks\ */$
 \State $util\_diff,\  removed \gets get\_migratable\_tasks(node)$
+\State
 \State $/*\ No\ migrate\ if\ cannot\ migrate\ or\ profit\ is\ little\ */$
 \If{$is\_useful\_migrate(util\_diff,\  removed)$}
 \State $bandwidth\_usage \gets bandwidth\_usage + migrate\_to\_node(removed)$
@@ -120,7 +123,7 @@ class Machine:
     {Simulation of Fine-Grained Scheduler}
   \label{fig:simufine}
 \end{figure}
-为了解决粗粒度调度器所遇到的性能问题，我们设计了细粒度的调度器。算法\ref{algo:simufine}说明了该调度算法的大致过程：和粗粒度的调度算法一样，细粒度算法遍历集群中所有的$G\_cell$，而与粗粒度算法不同的是，我们在一个$G\_cell$中找出负载最低的两个节点，而其他节点分别遍历其所有进程，找出其各自可迁移进程，加入到各自的$removed$集合中，即得到每个节点的可迁移进程的集合$removed$。相对于粗粒度的调度算法，我们认为细粒度的调度算法有较小的网络开销，由于在网络之中迁移的$removed$集合更少。假如一个$G\_cell$中有四个节点，则每个迁移周期中被网络传输的只有两个$removed$集合，而粗粒度的调度算法需要迁移三个$removed$集合。找出节点的$removed$集合后，首先向负载最低的节点迁移$removed$集合中的进程，直到负载最低的节点无法接收新的进程，接下来向负载第二低的节点迁移迁移$removed$集合中的进程，直到第二低负载节点无法接收新的进程。节点是否能接收新进程的判断标准与粗粒度的算法相同，即进程迁移的目的节点的负载不能大于源节点的负载，也不能大于负载警戒线$warning\_threshold$。当负载最低节点和负载第二低节点的接收列表$move\_to\_first$、$move\_to\_second$被填满后，统计两个列表的任务的CPU使用量，当使用量超过一定的阈值才可进行真正的迁移（由$is\_useful\_migrate()$函数判断）。
+为了解决粗粒度调度器所遇到的性能问题，我们设计了细粒度的调度器。算法\ref{algo:simufine}说明了该调度算法的大致过程：和粗粒度的调度算法一样，细粒度算法遍历集群中所有的$G\_cell$，而与粗粒度算法不同的是，我们在一个$G\_cell$中找出负载最低的两个节点，而其他节点分别遍历其所有进程，找出其各自可迁移进程，加入到各自的$removed$集合中，即得到每个节点的可迁移进程的集合$removed$。相对于粗粒度的调度算法，我们认为细粒度的调度算法有较小的网络开销，由于在网络之中迁移的$removed$集合更少。假如一个$G\_cell$中有四个节点，则每个迁移周期中被网络传输的只有两个$removed$集合，而粗粒度的调度算法需要迁移三个$removed$集合。在找出节点的$removed$集合后，我们首先向负载最低的节点迁移$removed$集合中的进程，直到负载最低的节点无法接收新的进程，接下来向负载第二低的节点迁移$removed$集合中的进程，直到第二低负载节点无法接收新的进程。节点是否能接收新进程的判断标准与粗粒度的算法相同，即进程迁移的目的节点的负载不能大于源节点的负载，也不能大于负载警戒线$warning\_threshold$。当负载最低节点和负载第二低节点的接收列表$move\_to\_first$、$move\_to\_second$被填满后，分别统计两个列表中所有任务的CPU使用量总和，当使用量超过一定的阈值才可进行真正的迁移（由$is\_useful\_migrate()$函数判断）。
 \begin{algorithm}[h]
 \begin{algorithmic}[1]
 \Function {migrate}{$timestamp$}
@@ -151,14 +154,14 @@ class Machine:
 \label{algo:simufine}
 \end{algorithm}
 
-如图\ref{fig:simufine}所示，细粒度的调度算法发生在两组节点之间。举例而言，对于$G\_cell$大小为4的集群，节点编号为node0-3，假设负载情况是node0\,<\,node1\,<\,node2\,<\,node3，那么进程将会由node2，3向node0，1迁移。而对比粗粒度的调度算法，只有node0作为接收进程的节点，需要同时接收来自于node1-3的可迁移进程。假设所有的节点不存在无法接收被迁移进程的情况（即资源充足），那么node0将会接收3个$removed$集合的进程，不但对node0的网络带宽造成较大压力，也使得node0的CPU负载迅速升高，但其他节点的CPU使用率一律降低，造成了CPU使用率的不均衡。而对于细粒度调度算法，node0，1平均只需接收来自于一个节点的$removed$集合，网络开销明显减小，且node0，1分担了CPU负载，CPU负载不会大幅度上升。所以我们认为，细粒度的调度算法具有更强的集群负载平衡能力，也具有较小的网络开销。
+如图\ref{fig:simufine}所示，细粒度的调度算法发生在两组节点之间。举例而言，对于$G\_cell$大小为4的集群，节点编号为node0-3，假设负载情况是node0\,<\,node1\,<\,node2\,<\,node3，那么进程将会由node2，3向node0，1迁移。而对比粗粒度的调度算法，只有node0作为接收进程的节点，需要同时接收来自于node1-3的可迁移进程。假设所有的节点不存在无法接收被迁移进程的情况（即资源充足），那么node0将会接收3个$removed$集合的进程，不仅对node0的网络带宽造成较大压力，而且使得node0的CPU负载升高、其他节点的CPU负载全部降低，加剧了CPU负载的不均衡。而对于细粒度调度算法，node0，1平均只需接收来自于一个节点的$removed$集合，网络开销明显减小，且node0，1分担了CPU负载，CPU负载不会大幅度上升。所以我们认为，细粒度的调度算法具有更强的集群负载平衡能力，也具有较小的网络开销。
 
 \subsection{排序的细粒度调度算法}
 在众多的调度器中，排序是提高调度器效率的重要方法，例如Linux\cite{linux}的完全公平调度器使用红黑树将进程按照$vruntime$排序，使得进程公平地拥有运行时间。在巨型虚拟机的调度算法中，依然可以应用排序。根据谷歌提供的集群追踪数据，我们有两种排序的方案：
 
-\noindent\textbf{根据CPU数据排序}\quad 谷歌的集群追踪数据中可用于CPU使用情况排序的数据有：$task\_usage$表中的进程每个时刻的CPU使用率$Task.usage[cpu]$，以及$task\_events$表中进程CPU使用率上限$Task.request$。我们认为，将CPU使用率较低的进程优先调度有助于提高集群的CPU使用率。举例而言，假设最低的节点剩余的CPU负载能力为1，而可供迁移的进程的CPU使用量是0.6，0.45，0.43。如果CPU使用率高的进程优先调度，则被迁移到负载最低节点上的进程为0.6，还剩余0.4未占用的CPU负载能力；如果CPU使用率低的进程优先调度，则进程0.45，0.43被调度，占用了0.87的空闲CPU，高于按照CPU使用率高的优先调度的情况。这是因为CPU使用率高的进程会在空余的CPU负载能力中造成较大的碎片，例如在这个例子中，0.6的进程造成了0.4的碎片，是空闲CPU使用量的40\%。假如可迁移进程的CPU使用量分别是1.1，0.9，0.1，那么如果CPU使用率高的进程优先调度，则不会有进程被调度；而CPU使用率低的进程优先调度则可以占满所有空闲的CPU。事实上，向空余CPU中填充进程的问题是一个背包问题，即：背包可以容纳重量为1的物品，每件物品的价值和重量相等，分别为0.6，0.45，0.43。背包问题一个NP完全问题，本文优先调度CPU占用较低的进程，用贪心法求得近似解。对于表征CPU使用量的数据的选取，我们认为$Task.usage[cpu]$比$Task.request$更具有代表性，因为$Task.usage$是实时获取的数据，更有利于动态计算集群中的任务负载情况。
+\noindent\textbf{根据CPU数据排序}\quad 谷歌的集群追踪数据中可用于CPU使用情况排序的数据有：$task\_usage$表中的进程每个时刻的CPU使用率$Task.usage[cpu]$，以及$task\_events$表中进程CPU使用率上限$Task.request$。我们认为，将CPU使用率较低的进程优先调度有助于提高集群的CPU使用率。举例而言，假设最低的节点剩余的CPU负载能力为1，可迁移进程的CPU使用量是0.6，0.45，0.43。如果CPU使用率高的进程优先调度，则被迁移到负载最低节点上的进程为0.6，还剩余0.4未占用的CPU负载能力；如果CPU使用率低的进程优先调度，则进程0.45，0.43被调度，占用了0.87的空闲CPU，高于按照CPU使用率高的优先调度的情况。这是因为CPU使用率高的进程会在空余的CPU负载能力中造成较大的碎片，例如在这个例子中，0.6的进程造成了0.4的碎片，是空闲CPU使用量的40\%。再假设可迁移进程的CPU使用量分别是1.1，0.9，0.1，那么如果CPU使用率高的进程优先调度，则不会有进程被调度；而CPU使用率低的进程优先调度则可以占满所有空闲的CPU。事实上，向空余CPU中填充进程的问题是一个背包问题，即：背包可以容纳重量为1的物品，每件物品的价值和重量相等，分别为0.6，0.45，0.43。背包问题是一个NP完全问题，本文优先调度CPU占用较低的进程，用贪心法求得近似解。对于表征CPU使用量的数据的选取，我们认为$Task.usage[cpu]$比$Task.request$更具有代表性，因为$Task.usage$是实时获取的数据，更有利于动态计算集群中的任务负载情况。
 
-\noindent\textbf{根据内存数据排序}\quad 对内存使用情况进行排序的主要目的是降低网络的开销。我们使用的谷歌的集群追踪数据主要提供了进程的两个内存使用情况的数据：$Task.usage[memory]$每个时刻下进程容器所使用的总的内存页数量，称作assigned memory，包含该任务的用户态和内核态页面，也是谷歌Borg集群中容器迁移所要迁移的真正的页面数量（见\ref{chap:containermigration}节的背景介绍）；$Task.usage[MPI]$，平均每条指令的访存次数（memory accesses per instruction），通过performance counter获得\footnote{performance counter\cite{perf}是CPU硬件上的一组寄存器，记录了各类硬件事件，包括分支预测错误、缓存不命中次数、指令执行次数等。}。一个进程所拥有的内存页的数量与缓存不命中的频率有一些关联度（正相关），但关联度不是很高：CPU密集型任务拥有的内存页较少，MPI也较低；内存密集型任务的MPI较高，但其经常访问的内存页的数目不一定大，也存在拥有大量内存页的进程的MPI较低的情况，故MPI反映了进程频繁访问内存页面的数量。如果优先调度内存占用$Task.usage[memory]$或$Task.usage[MPI]$高的进程，将会有效地减小迁移的网络开销。由于细粒度的调度器将可调度进程分为两组（在真实情况下，巨型虚拟机的任务将在两个NUMA节点上运行），这两组进程可能会产生大量的共享内存访问（见\ref{chap:memm}节）。但是由于谷歌的追踪数据未提供进程访问内存的具体位置，所以我们无法对此情况进行仿真。
+\noindent\textbf{根据内存数据排序}\quad 对内存使用情况进行排序的主要目的是降低网络的开销。我们使用的谷歌集群追踪数据主要提供了进程的两个内存使用情况的数据：$Task.usage[memory]$每个时刻下进程容器所使用的总的内存页数量，称作assigned memory，包含该任务的用户态和内核态页面，也是谷歌Borg集群中容器迁移所要迁移的真正的页面数量（见\ref{chap:containermigration}节的背景介绍）；$Task.usage[MPI]$，平均每条指令的访存次数（memory accesses per instruction），通过performance counter获得\footnote{performance counter\cite{perf}是CPU硬件上的一组寄存器，记录了各类硬件事件，包括分支预测错误、缓存不命中次数、指令执行次数等。}。一个进程所拥有的内存页的数量与缓存不命中的频率有一些关联度（正相关），但关联度不是很高：CPU密集型任务拥有的内存页较少，MPI也较低；内存密集型任务的MPI较高，但其经常访问的内存页的数目不一定大，也存在拥有大量内存页的进程MPI较低的情况，故MPI反映了进程频繁访问内存页面的数量。如果优先调度内存占用$Task.usage[memory]$或$Task.usage[MPI]$高的进程，将会有效地减小迁移的网络开销。由于细粒度的调度器将可调度进程分为两组（在真实情况下，巨型虚拟机的任务将在两个NUMA节点上运行），这两组进程可能会产生大量的共享内存访问（见\ref{chap:memm}节）。但是由于谷歌的追踪数据未提供进程访问内存的具体位置，所以我们无法对此情况进行仿真。
 
 排序的细粒度调度算法由算法\ref{algo:sorted}表述。在每个迁移循环中，将$removed$队列按照$sort\_option$排序，将$removed$队列首部的第一个进程$pop()$出来，依次添加到$move\_to\_first$集合和$move\_to\_second$集合中等待迁移，除此之外和未排序的细粒度仿真算法相同。我们提供了6个$sort\_option$，作为测试比较的对象，分别为：（1）不排序（$fine\_grained$）（2）根据CPU资源请求量排序（$cpu\_request$）（3）根据CPU真实用量排序（$cpu\_usage$）（4）根据内存真实用量排序（$mem\_usage$）（5）根据CPU真实用量从大到小排序（$1/cpu\_usage$）（6）根据缓存不命中频率排序（$cache\_misses$）
 
