--- a/tex/chapter05.tex
+++ b/tex/chapter05.tex
@@ -8,7 +8,7 @@
 本章将分别对真实环境下的粗粒度调度器和仿真集群中的调度器设计与调优进行测试，并分析测试结果，从而得出结论。
 
 \section{粗粒度调度算法的测试}
-粗粒度调度算法基于Bash脚本实现（rebalance.sh），作为巨型虚拟机客户机的启动项运行在客户机中。巨型虚拟机部署在有四个节点的真实集群中，四个节点的配置如表\ref{tab:config}所示。每个节点有16个CPU核，128GB主存，节点之间通过网络相连。巨型虚拟机实例拥有32个vCPU，12G内存，每个节点上分别有8个本地vCPU。故巨型虚拟机给上层客户机呈现了一个NUMA架构的机器，共4个NUMA节点，分别为Node\,0-3，分别运行在Host\,0-3上。rebalance.sh脚本在客户机启动时首先将所有客户机内进程固定在Node\,0上，在此之后每隔2秒计算巨型虚拟机4个NUMA节点的steal time，如果当前处于活动状态的Node上steal time大于50个节拍，则将所有进程重新固定到steal time最低的节点。
+粗粒度调度算法基于Bash脚本实现（rebalance.sh），作为巨型虚拟机客户机的启动项运行在客户机中。巨型虚拟机部署在有四个节点的真实集群中，四个节点的配置如表\ref{tab:config}所示。每个节点有16个CPU核，128GB主存，节点之间通过网络相连。巨型虚拟机实例拥有32个vCPU，12G内存，每个节点上分别有8个本地vCPU。故巨型虚拟机给上层客户机呈现了一个NUMA架构的机器，共4个NUMA节点，分别为Node\,0-3，分别运行在Host\,0-3上。rebalance.sh脚本在客户机启动时首先将所有客户机内进程固定在Node\,0上，在此之后每隔2秒计算巨型虚拟机4个NUMA节点的$steal time$，如果当前处于活动状态的Node上$steal time$大于50个节拍，则将所有进程重新固定到$steal time$最低的节点。
 
 \begin{table}[!htpb]
   \bicaption[测试集群配置]{测试集群配置}{Cluster Configuration in the Experiment}
@@ -94,7 +94,7 @@
 
 本文除了CPU和基尼系数两个测试指标之外，还有两个测试指标：所有任务的平均超量使用资源（$Overcommit$），以及所有任务的平均延迟（$Duration$）。这两项指标均是越低越好：任务的超量使用资源越少，则表明在真实的集群中该任务的QoS影响越小，调度算法平衡性能更强；任务的延迟越小，则表明任务等待调度的时间越短，即获得了更多的运行时间。如图\ref{fig:dur_over}所示，横轴调度算法的顺序与图\ref{fig:cpu_gini}相同，两项指标虽然有起伏，但总体在升高，和我们测得的CPU与基尼系数两项数据大致吻合。
 
-调度算法的网络开销也是我们关注的重点。对于网络带宽占用，我们统计了每个迁移循环的网络开销$net\_overhead(i)$，并将数据进行累积，计算从开始集群仿真到每个迁移循环为止的网络用量，即$acc\_net\_overhead(i+1)=acc\_net\_overhead(i+1)+net\_overhead(i)$。如图\ref{fig:minetwork}，仿真集群开始运行时，网络开销较小，这是由于集群的任务数量尚未填满，无需进行调度。其后进程数量逐渐增多，调度的网络开销也逐渐增加，直到最后进程逐渐完成，集群负载再次下降，调度的网络开销也逐渐变小。对不同的调度算法进行对比，粗粒度的调度算法网络开销最大，由于每个循环中迁移的进程数目较多；不做迁移则网络开销为0，按照缓存不命中排序的算法网络开销最小，由于MPI真实地反映了进程频繁访问页面的多少。按照CPU指标排序造成的网络开销普遍大于按照Memory指标排序，这在我们的预期之内。
+调度算法的网络开销也是我们关注的重点。对于网络带宽占用，我们统计了每个迁移循环$i$的网络开销$net\_overhead(i)$，并将数据进行累积，计算从开始集群仿真到第$i$个迁移循环为止的网络用量，即$acc\_net\_overhead(i)=acc\_net\_overhead(i-1)+net\_overhead(i)$。如图\ref{fig:minetwork}，仿真集群开始运行时，网络开销较小，这是由于集群的任务数量尚未填满，无需进行调度。其后进程数量逐渐增多，调度的网络开销也逐渐增加，直到最后进程逐渐完成，集群负载再次下降，调度的网络开销也逐渐变小。对不同的调度算法进行对比，粗粒度的调度算法网络开销最大，由于每个循环中迁移的进程数目较多；不做迁移则网络开销为0，按照缓存不命中排序的算法网络开销最小，由于MPI真实地反映了进程频繁访问页面的多少。按照CPU指标排序造成的网络开销普遍大于按照Memory指标排序，这在我们的预期之内。
 \begin{figure}[!htp]
   \centering
   \includegraphics[width=14cm]{network.pdf}
