--- a/tex/chapter05.tex
+++ b/tex/chapter05.tex
@@ -94,15 +94,18 @@
 
 本文除了CPU和基尼系数两个测试指标之外，还有两个测试指标：所有任务的平均超量使用资源（$Overcommit$），以及所有任务的平均延迟（$Duration$）。这两项指标均是越低越好：任务的超量使用资源越少，则表明在真实的集群中该任务的QoS影响越小，调度算法平衡性能更强；任务的延迟越小，则表明任务等待调度的时间越短，即获得了更多的运行时间。如图\ref{fig:dur_over}所示，横轴调度算法的顺序与图\ref{fig:cpu_gini}相同，两项指标虽然有起伏，但总体在升高，和我们测得的CPU与基尼系数两项数据大致吻合。
 
-调度算法的网络开销也是我们关注的重点。对于网络带宽占用，我们统计了每个迁移循环$i$的网络开销$net\_overhead(i)$，并将数据进行累积，计算从开始集群仿真到第$i$个迁移循环为止的网络用量，即$acc\_net\_overhead(i)=acc\_net\_overhead(i-1)+net\_overhead(i)$。如图\ref{fig:minetwork}，仿真集群开始运行时，网络开销较小，这是由于集群的任务数量尚未填满，无需进行调度。其后进程数量逐渐增多，调度的网络开销也逐渐增加，直到最后进程逐渐完成，集群负载再次下降，调度的网络开销也逐渐变小。对不同的调度算法进行对比，粗粒度的调度算法网络开销最大，由于每个循环中迁移的进程数目较多；不做迁移则网络开销为0，按照缓存不命中排序的算法网络开销最小，由于MPI真实地反映了进程频繁访问页面的多少。按照CPU指标排序造成的网络开销普遍大于按照Memory指标排序，这在我们的预期之内。
+调度算法的网络开销也是我们关注的重点。对于网络带宽占用，我们统计了每个迁移循环$i$的网络开销$net\_overhead(i)$，并将数据进行累积，计算从开始集群仿真到第$i$个迁移循环为止的网络用量，即$acc\_net\_overhead(i)=acc\_net\_overhead(i-1)+net\_overhead(i)$。
+
 \begin{figure}[!htp]
   \centering
-  \includegraphics[width=14cm]{network.pdf}
+  \includegraphics[width=12cm]{network.pdf}
   \bicaption[八种调度算法网络开销对比]
     {八种调度算法网络开销对比}
     {Comparison of Eight Scheduling Algorithms' Network Overhead}
   \label{fig:minetwork}
 \end{figure}
+
+如图\ref{fig:minetwork}，仿真集群开始运行时，网络开销较小，这是由于集群的任务数量尚未填满，无需进行调度。直到第397个循环，进程数量逐渐增多，调度的网络开销也逐渐增加。到最后，进程逐渐完成，在第837个循环时，集群负载再次下降，调度的网络开销也逐渐变小。对不同的调度算法进行对比，粗粒度的调度算法网络开销最大，由于每个循环中迁移的进程数目较多；不做迁移则网络开销为0，按照缓存不命中排序的算法网络开销最小，由于MPI真实地反映了进程频繁访问页面的多少。按照CPU指标排序造成的网络开销普遍大于按照Memory指标排序，这在我们的预期之内。
 
 \begin{figure}[!htp]
   \centering
@@ -126,7 +129,9 @@
 
 随着集群机器数量$N\_MACHINES$的上升，所有算法的CPU使用率均下降，基尼系数均上升，这是因为集群中任务数量是固定的，越多的机器数量则CPU负载越低，空闲机器越多，从而每个任务的资源超量使用量$Overcommit$也下降，延迟$Duration$也下降。随着资源超量提供率$Over\_commitment\_ratio$的上升，任务之间的资源竞争越来越少，系统中空闲的资源越来越多，故集群CPU使用率下降，基尼系数上升，每个任务的资源超量使用量$Overcommit$下降，延迟$Duration$上升，这是由于随着每个进程的$Over\_commitment\_ratio$不断上升，系统为其分配的资源就变得更充足，于是系统中可以容纳的进程数就更少，新到来的进程需要等待更长的时间才可以被调度运行，于是造成了$Duration$的上升。
 
-我们还统计了$N\_MACHINES$和$Over\_commitment\_ratio$对不同的调度算法网络开销的影响。如图\ref{fig:netcom}，粗粒度的调度算法总是具有最高的网络开销，这是因为它迁移了3个$removed$集合中的进程；在细粒度算法中，按照内存指标排序的算法一般具有更低的网络开销，按照CPU指标排序的算法则具有更高的网络开销，而不排序的算法网络开销在CPU指标和内存指标之间，这符合之前的推断与测试数据。随着集群机器数量的上升，平衡算法的网络开销均减小，这是由于很少有机器的负载超过了警戒线，不会触发迁移机制。而随着$Over\_commitment\_ratio$的提高，系统中同时容纳的进程数量也在下降，使得集群中更少机器的负载超过了警戒线，于是更少地触发了迁移。
+我们还统计了$N\_MACHINES$和$Over\_commitment\_ratio$对不同的调度算法网络开销的影响。如图\ref{fig:netcom}，粗粒度的调度算法总是具有最高的网络开销，这是因为它迁移了3个$removed$集合中的进程；在细粒度算法中，按照内存指标排序的算法一般具有更低的网络开销，按照CPU指标排序的算法则具有更高的网络开销，而不排序的算法网络开销在CPU指标和内存指标之间，这符合之前的推断与测试数据。随着集群机器数量的上升，平衡算法的网络开销均减小，这是由于很少有机器的负载超过了警戒线，不会触发迁移机制。而随着$Over\_commitment\_ratio$的提高，系统中同时容纳的进程数量也在下降，使得集群中更少机器的负载超过了警戒线，于是更少地触发了迁移。此测试也表明，我们的迁移算法造成的网络开销不超过7MBit/sec，远小于第\ref{chap:mmm}节中提到的虚拟机热迁移的694Mbit/sec，是网络开销很小的资源重分配方式。
+
+最后，我们测试细粒度算法是否需要进行更细粒度的优化。我们选取根据$mem\_usage$排序的细粒度调度算法进行测试，由于其CPU负载平衡性能最佳。如图\ref{fig:distr}，$total\_tasks$表示一个$G\_cell$中所有待迁移的进程，而$move\_to\_first$代表被调度到负载最低的节点上的进程数量，$move\_to\_second$代表被调度到负载第二低的节点上的进程数量，故在每个迁移循环中，有$total\_tasks\,=\,move\_to\_first\,+\,move\_to\_second$。
 
 \begin{figure}[!htp]
   \centering
@@ -137,9 +142,7 @@
   \label{fig:distr}
 \end{figure}
 
-
-
-最后，我们测试细粒度算法是否需要进行更细粒度的优化。我们选取根据$mem\_usage$排序的细粒度调度算法进行测试，由于其CPU负载平衡性能最佳。如图\ref{fig:distr}，$total\_tasks$表示一个$G\_cell$中所有待迁移的进程，而$move\_to\_first$代表被调度到负载最低的节点上的进程数量，$move\_to\_second$代表被调度到负载第二低的节点上的进程数量，故在每个迁移循环中，有$total\_tasks\,=\,move\_to\_first\,+\,move\_to\_second$。可以看出，对于大小为4的$G\_cell$，$move\_to\_first$已经占据了绝大部分的可迁移进程，而$move\_to\_second$使用了剩余的可迁移进程，一般只有1个进程被迁移到负载第二低的节点。故CPU平衡性能较粗粒度的调度算法更好，但不需要考虑负载第三低节点，由于给负载第二低的节点剩余的进程已经很少，可以推知负载第三低节点已经没有可使用的进程。而对于其他大小的$G\_cell$，存在一个最佳的调度粒度，本文尚未进行研究。
+可以看出，对于大小为4的$G\_cell$，$move\_to\_first$已经占据了绝大部分的可迁移进程，而$move\_to\_second$使用了剩余的可迁移进程，一般只有1个进程被迁移到负载第二低的节点。故CPU平衡性能较粗粒度的调度算法更好，但不需要考虑负载第三低节点，由于给负载第二低的节点剩余的进程已经很少，可以推知负载第三低节点已经没有可使用的进程。而对于其他大小的$G\_cell$，存在一个最佳的调度粒度，本文尚未进行研究。观察进程数量分布曲线可以得知，集群中的任务有一定的workload pattern（工作负载样式），大约第48、83、145、242个迁移循环是workload pattern的分界线。而我们的细粒度调度算法可以动态地根据workload pattern分配迁移进程的数量，故更好地适应了工作负载的变化，有很好的灵活性。
 
 \section{本章小结}
 本章首先对真实环境下的粗粒度调度脚本进行了测试，分别在巨型虚拟机和物理节点上运行尽力而为型和延迟敏感型任务，得知粗粒度的调度算法可以动态感知工作负载的变化，提高集群CPU使用率，对任务服务质量的影响较低，以一种高效的方式完成了资源重分配，达到了我们的设计目标。同时，我们对仿真集群中的各类调度算法进行了测试，得知细粒度的调度算法比粗粒度的算法更优，而对进程排序更有效地优化了细粒度调度算法的性能。我们还探讨了是否需要更细粒度的优化，经过对可迁移进程的分布进行统计，我们发现无需进行更细粒度的优化。
