--- a/thesis.tex
+++ b/thesis.tex
@@ -19,6 +19,7 @@
 \usepackage{import}
 \usepackage{enumitem}
 \usepackage{etoolbox}
+\usepackage{tablefootnote}
 %\usepackage{subcaption}
 %\usepackage{algorithmic}
 \DeclareMathOperator*{\argmax}{arg\,max}
